# climateGPT

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
climateGPT/: format_open_mixtral_output.ipynb  prepare_sft_dataset.py
climateGPT/prompt_templates/: sft_dataset.txt
climateGPT/src/: apply_chat_template_to_sft_dataset.py  create_sft_dataset.py  repositories.py
