[tool.poetry]
name = "climateGPT"
version = "0.1.0"
description = "A project to fine-tune an existing LLM as a specialized climate change assistant."
authors = ["Pierre Pessarossi <pierre.pessarossi@gmail.com>"]
repository = "https://github.com/pierre-pessarossi-ai/wikiGPT"
packages = [
    {include = "climateGPT"},
]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"
torch = ">=2.0.0"
jupyterlab = "*"
ipykernel = "*"
structlog = "*"
tqdm = "*"
datasets = "*"
huggingface-hub = "*"
wandb = "*"
simple-parsing = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
black = {extras = ["toml"], version = "*"}
flake8 = "*"
mypy = "*"
