[tool.poetry]
name = "climateGPT"
version = "0.1.0"
description = "A project to fine-tune an existing LLM as a specialized climate change assistant."
authors = ["Pierre Pessarossi <pierre.pessarossi@gmail.com>"]
repository = "https://github.com/pierre-pessarossi-ai/wikiGPT"
packages = [
    {include = "climateGPT"},
]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"
torch = "^2.1.0"
accelerate = "^0.26.1"
bitsandbytes = "^0.42.0"
datasets = "^2.16.1"
peft = "^0.8.1"
transformers = "^4.37.2"
einops = "^0.7.0"
jupyterlab = "*"
ipykernel = "*"
structlog = "*"
tqdm = "*"
huggingface-hub = "*"
wandb = "*"
simple-parsing = "*"
mistralai = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
black = {extras = ["toml"], version = "*"}
flake8 = "*"
mypy = "*"
